# cointracker-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: state.rs  ui.rs
src/models/: config.rs  crypto.rs  fear_greed.rs  mod.rs
src/services/: api.rs  logger.rs
src/utils/: formatters.rs
