[package]
name = "crypto-cli"
authors = ["Gabriel Kripalani <gabriel@kripalani.dk>"]
version = "0.3.1"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
itertools = "0.10"